// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-bJsHXV jjvliU"
>
  <input
    checked={true}
    className="sc-ktyGiW bgyYcA"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-cWAxUP gGocv"
  >
    <span
      className="sc-gVflOg fiyNLc"
    >
      <div
        checked={true}
        className="sc-kNCMYV erqAMQ"
      />
    </span>
    <p
      className="sc-hdyzPZ bKlfuV"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-bJsHXV jjvliU"
>
  <input
    className="sc-ktyGiW bgyYcA"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-cWAxUP gGocv"
  >
    <span
      className="sc-gVflOg fiyNLc"
    >
      <div
        checked={false}
        className="sc-kNCMYV jmgiJN"
      />
    </span>
    <p
      className="sc-hdyzPZ bKlfuV"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-bJsHXV jjvliU"
>
  <input
    className="sc-ktyGiW bgyYcA"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-cWAxUP gGocv"
  >
    <span
      className="sc-gVflOg fiyNLc"
    >
      <div
        checked={false}
        className="sc-kNCMYV jmgiJN"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-bJsHXV jjvliU"
>
  <input
    className="sc-ktyGiW bgyYcA"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-cWAxUP gGocv"
  >
    <span
      className="sc-gVflOg fiyNLc"
    >
      <div
        checked={false}
        className="sc-kNCMYV jmgiJN"
      />
    </span>
    <p
      className="sc-hdyzPZ bKlfuV"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-bJsHXV jjvliU"
>
  <input
    className="sc-ktyGiW bgyYcA"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-cWAxUP gGocv"
  >
    <span
      className="sc-gVflOg fiyNLc"
    >
      <div
        checked={false}
        className="sc-kNCMYV jmgiJN"
      />
    </span>
    <p
      className="sc-hdyzPZ bKlfuV"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
